request(form & hero-home) corrected spacing around cards request#51593

--- a/src/components/hero/hero-home/hero-home.sass
+++ b/src/components/hero/hero-home/hero-home.sass
@@ -114,8 +114,9 @@
       flex-direction: column
     @include phone-lg
       flex-direction: column
-    padding-top: 1rem 
     display: flex
+    flex-direction: row
+    padding-top: 1rem 
 
 
   &__card-container
